test/force-app/main/default/objects/DSD_Term__c/DSD_Term__c.object-meta.xml
<CustomObject>
    <label>DSD Term</label>
    <nameField>
        <label>Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSD Terminology Wiki</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>