test/force-app/main/default/objects/DSD_Term__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <inlineHelpText>What functions are expected to know what this means? Select &quot;General&quot; if it&apos;s widely used across the business.</inlineHelpText>
    <label>Function(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Acquisitions</fullName>
            </value>
            <value>
                <fullName>Canopy Team</fullName>
            </value>
            <value>
                <fullName>Commercial Analyst</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Cost Estimator</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Development Engineering</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Incentives Team</fullName>
            </value>
            <value>
                <fullName>IX Team</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Origination</fullName>
            </value>
            <value>
                <fullName>Project Engineering</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Structured Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>