test/force-app/main/default/objects/DSD_Term__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Add any additional context you wish to convey</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>